--- a/api/.pylintrc
+++ b/api/.pylintrc
@@ -9,25 +9,25 @@
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use "--disable=all --enable=classes
 # --disable=W".
-disable=raw-checker-failed,
-        bad-inline-option,
-        locally-disabled,
-        file-ignored,
-        suppressed-message,
-        useless-suppression,
-        deprecated-pragma,
-        use-symbolic-message-instead,
-        use-implicit-booleaness-not-comparison-to-string,
-        use-implicit-booleaness-not-comparison-to-zero,
-        C0114, #missing-module-docstring
-        R0902, #too-many-instance-attributes
-        R0903, #too-few-public-methods
-        duplicate-code,
-        W0622, #redefined-builtin
-        W0621, #redefined-outer-name
-        W0718, #broad-exception-caught
-        C0115, #missing-class-docstring
-        C0116, #missing-function-docstring
+; disable=raw-checker-failed,
+;         bad-inline-option,
+;         locally-disabled,
+;         file-ignored,
+;         suppressed-message,
+;         useless-suppression,
+;         deprecated-pragma,
+;         use-symbolic-message-instead,
+;         use-implicit-booleaness-not-comparison-to-string,
+;         use-implicit-booleaness-not-comparison-to-zero,
+;         C0114, #missing-module-docstring
+;         R0902, #too-many-instance-attributes
+;         R0903, #too-few-public-methods
+;         duplicate-code,
+;         W0622, #redefined-builtin
+;         W0621, #redefined-outer-name
+;         W0718, #broad-exception-caught
+;         C0115, #missing-class-docstring
+;         C0116, #missing-function-docstring
 
 # Files or directories to be skipped. They should be base names, not paths.
 ignore=
