--- a/api/.vscode/settings.json
+++ b/api/.vscode/settings.json
@@ -4,6 +4,6 @@
       "when": "$(basename).py"
     },
     "**/__pycache__": true,
-    "**/*.pytest_cache": true
+    "**/*.pytest_cache": true,
   }
 }
